Truncate class setup to work properly, requires additional css properties (namely nowrap whitespace), should solve funkatron/Spaz-Enyo#39

--- a/source/css/core.css
+++ b/source/css/core.css
@@ -1,6 +1,8 @@
 /* global */
-truncating-text {
+.truncating-text {
 	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 body, input, button {
 	font-size: 20px;
